// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGlobalOverrides for form components should render FieldLabel with global override shorthand 1`] = `
<div
  checked={true}
  className=""
  for="dummy"
  id="fieldLabel-dummy"
  path="dummy"
>
  Bar
</div>
`;

exports[`useGlobalOverrides for form components should render FilterLabel with global override shorthand 1`] = `
<div
  checked={true}
  className=""
  for="dummy"
  id="filterLabel-dummy"
  path="dummy"
>
  Bar
</div>
`;
